packages/react-dialogues/src/styles.css
@import './controls/styles.css';
@import './dialog/styles.css';
@import './modal/styles.css';
@import './toast/styles.css';
@import './popover/styles.css';

html,
[data-theme='light'] {
  --rd-hover-shadow: rgba(0, 0, 0, 0.05);
  --rd-primary: #1677ff;
  --rd-primary-dark: #0958d9;
  --rd-primary-light: #4096ff;
  --rd-primary-soft: #91caff;
  --rd-success: #52c41a;
  --rd-warning: #faad14;
  --rd-error: #ff4d4f;
  --rd-info: var(--rd-primary);

  --rd-bg: #fff;
  --rd-bg-contast: #262626;
  --rd-bg-disabled: rgba(0, 0, 0, 0.04);
  --rd-btn-border: #d9d9d9;
  --rd-text: rgba(0, 0, 0, 0.88);
  --rd-text-disabled: rgba(0, 0, 0, 0.25);
}

[data-theme='dark'] {
  --rd-bg: #1f1f1f;
  --rd-bg-contast: #424242;
  --rd-bg-disabled: rgba(255, 255, 255, 0.04);
  --rd-btn-border: #424242;
  --rd-text: rgba(255, 255, 255, 0.85);
  --rd-text-disabled: rgba(255, 255, 255, 0.25);
}

@keyframes rd-opacity {
  from {
    opacity: 0;
  }
}

@keyframes rd-scaleUp {
  from {
    opacity: 0;
    transform: scale(0.35);
  }
}

